gas price fixed again for creating election metamsk

--- a/client/src/styles/Candidate.css
+++ b/client/src/styles/Candidate.css
@@ -5,6 +5,8 @@
     margin-bottom: 0;
     border: none;
     border-bottom: 1px solid white;
+    justify-content: center;
+    align-items: center;
 }
 
 .avatar > img {
