few tweaks to success alert and error alert

--- a/client/src/styles/Candidate.css
+++ b/client/src/styles/Candidate.css
@@ -10,10 +10,9 @@
 }
 
 .avatar > img {
-    margin-right: 20px;
+    margin-right: 30px;
     display: flex;
     align-items: center;
-
 }
 
 .candidate-list {
@@ -24,7 +23,6 @@
 }
 .candidate-info {
     display: flex;
-    align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     flex-direction: column;
 }
