--- a/client/src/styles/Candidate.css
+++ b/client/src/styles/Candidate.css
@@ -1,10 +1,10 @@
 .candidate {
     display: flex;
     padding: 30px;
-    background-color: lightgray;
+    background-color:#faf6fa;
     margin-bottom: 0;
     border: none;
-    border-bottom: 1px solid white;
+    border-bottom: 1px solid lightgrey;
     justify-content: center;
     align-items: center;
 }
@@ -25,4 +25,8 @@
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
+}
+
+.file-input:focus {
+    outline: none;
 }
