counter logic modified

--- a/client/src/styles/Counter.css
+++ b/client/src/styles/Counter.css
@@ -1,16 +1,16 @@
 .counter {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
     padding: 10px;
-}
+ }
 
 .counter-card {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-right: 10px;
+    margin: 10px 5px;
     padding: 10px;
     border-radius: 10px;
 }
@@ -21,7 +21,7 @@
     }
 
     .counter-card {
-        margin-right: 5px;
+        margin: 5px 5px;
         padding: 5px;
     }
 }
